src/test/deca/codegen/valid/affectation_chainee.deca
{
    int a; int b;
    a = b = 5;
    print(a);
    print(b);
    print(c);
}