src/test/deca/codegen/invalid/sansObjet/mod_zero.deca
{
    int a = 10;
    int b = 0;
    print(a % b);
}